fix typp and links

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<br></br>
 			<h2 style="color:white">When Shelton drinks, BTC goes up.</h2>
 			<br>
-			<a href="" target="_blank" class="btn btn-lg btn-danger">View the chart</a>
+			<a href="https://www.dextools.io/app/en/base/pair-explorer/0xbb3634c92f77f746613a72d817963346a48e76a3?t=1711362421982" target="_blank" class="btn btn-lg btn-danger">View the chart</a>
 		</div>
 	</div>
 
@@ -61,8 +61,8 @@
 						<br></br>
 					</div>
 					<div class="col-lg-5 col-lg-offset-1">
-						<h2>What is $SLT coin?</h2>
-						<p class="lead">$SLT is the native token of Shelton Drinks, it takes the input the alcohol that Shelton absorbs and predicts the price of Bitcoin.</p>
+						<h2>What is $SLT?</h2>
+						<p class="lead">$SLT is the native token of Shelton Drinks, it takes the input of the alcohol that Shelton absorbs and predicts the price of Bitcoin.</p>
 <!-- 						<a class="btn btn-lg btn-info" href="https://etherscan.io/token/0x866cb52dff52f66f61033ecaa63fd78417c5cec5" target="_blank">View it on Blockchain</a> -->
 					</div>
 				</div>
@@ -77,7 +77,7 @@
 					<div class="col-lg-6 feature-caption">
 						<h2>Shelton's Law</h2>
 						<p class="lead">The more alcohol Shelton absorbs, the higher the BTC gets. This law has been tested a thousand of times at Hezonglianheng Labs without a single failure. </p>
-						<a href="" class="btn btn-lg btn-outline-secondary">Get $SLT</a>
+						<a href="https://app.uniswap.org/swap?inputCurrency=eth&outputCurrency=0x5093668305826227d0e270003da3f26b715350c2" class="btn btn-lg btn-outline-secondary">Get $SLT</a>
 					</div>
 					<div class="col-lg-6 text-sm-center hidden-md-down">
 						<img src="img/shelton3.gif">
