change chart link to dexscreener

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<br></br>
 			<h2 style="color:white">When Shelton drinks, BTC goes up.</h2>
 			<br>
-			<a href="https://www.dextools.io/app/en/base/pair-explorer/0xbb3634c92f77f746613a72d817963346a48e76a3?t=1711362421982" target="_blank" class="btn btn-lg btn-danger">View the chart</a>
+			<a href="https://dexscreener.com/base/0xbb3634c92f77f746613a72d817963346a48e76a3" target="_blank" class="btn btn-lg btn-danger">View the chart</a>
 		</div>
 	</div>
 
