--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 						<blockquote class="blockquote">
 							&ldquo;We have adopted $SLT as the official currency in our nation.&rdquo;
 							<footer class="blockquote-footer">
-								Hezonglianheng Nation
+								King of Qin, Hezonglianheng Nation
 							</footer>
 						</blockquote>
 					</div>
