--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					</div>
 					<div class="col-lg-5 col-lg-offset-1">
 						<h2>What is $SLT?</h2>
-						<p class="lead">$SLT is the native token of Shelton Drinks, it takes the input of the alcohol that Shelton absorbs and predicts the price of Bitcoin.</p>
+						<p class="lead">$SLT is the native token of Shelton Drinks. It analyzes the alcohol absorbed by Shelton to predict Bitcoin's price.</p>
 <!-- 						<a class="btn btn-lg btn-info" href="https://etherscan.io/token/0x866cb52dff52f66f61033ecaa63fd78417c5cec5" target="_blank">View it on Blockchain</a> -->
 					</div>
 				</div>
@@ -76,7 +76,7 @@
 				<div class="feature-content">
 					<div class="col-lg-6 feature-caption">
 						<h2>Shelton's Law</h2>
-						<p class="lead">The more alcohol Shelton absorbs, the higher the BTC gets. This law has been tested a thousand of times at Hezonglianheng Labs without a single failure. </p>
+						<p class="lead">The more alcohol Shelton absorbs, the higher Bitcoin's price rises. This correlation has been confirmed in thousands of tests at Hezonglianheng Labs without any failures. </p>
 						<a href="https://app.uniswap.org/swap?inputCurrency=eth&outputCurrency=0x5093668305826227d0e270003da3f26b715350c2" class="btn btn-lg btn-outline-secondary">Get $SLT</a>
 					</div>
 					<div class="col-lg-6 text-sm-center hidden-md-down">
